--- a/Project.toml
+++ b/Project.toml
@@ -7,8 +7,11 @@ version = "0.1.0"
 Blosc = "a74b3585-a348-5f62-a45c-50e91977d574"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JLSO = "9da8a3cd-07a3-59c0-a743-3fdc52c30d11"
 Missings = "e1d29d7a-bbdc-5cf2-9ac0-f12de2c33e28"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
 
 [compat]
 julia = "1"
