--- a/Project.toml
+++ b/Project.toml
@@ -5,18 +5,16 @@ version = "0.1.0"
 
 [deps]
 Blosc = "a74b3585-a348-5f62-a45c-50e91977d574"
+BufferedStreams = "e1450e63-4bb3-523b-b2a4-4ffa8c0fd77d"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
-JLSO = "9da8a3cd-07a3-59c0-a743-3fdc52c30d11"
 Missings = "e1d29d7a-bbdc-5cf2-9ac0-f12de2c33e28"
 RLEVectors = "17b45ede-fd0d-54ef-b825-8cf9fc64da95"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
-WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
+WeakRefStrings = "ea10d353-3f73-51f8-a26c-33c1cb351aa5"
 
 [compat]
-julia = "1"
+julia = "1.3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
