--- a/Project.toml
+++ b/Project.toml
@@ -6,15 +6,14 @@ version = "0.1.0"
 [deps]
 Blosc = "a74b3585-a348-5f62-a45c-50e91977d574"
 BufferedStreams = "e1450e63-4bb3-523b-b2a4-4ffa8c0fd77d"
-CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Missings = "e1d29d7a-bbdc-5cf2-9ac0-f12de2c33e28"
-RLEVectors = "17b45ede-fd0d-54ef-b825-8cf9fc64da95"
+Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 WeakRefStrings = "ea10d353-3f73-51f8-a26c-33c1cb351aa5"
 
 [compat]
-julia = "1.3"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
