--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,8 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 WeakRefStrings = "ea10d353-3f73-51f8-a26c-33c1cb351aa5"
 
 [compat]
-julia = ">= 1.2"
+julia = ">= 1.1"
+DataFrames = "^0.19.0"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
