--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ DataFrames = "0.19"
 Missings = "0.4"
 StatsBase = "0.32"
 WeakRefStrings = "0.6"
-julia = ">= 1.1"
+julia = "1.1, 1.2, 1.3"
 
 [extras]
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
