--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "JDF"
 uuid = "babc3d20-cd49-4f60-a736-a8f9c08892d3"
 authors = ["Dai ZJ <zhuojia.dai@gmail.com>"]
-version = "0.2.0"
+version = "0.2.1"
 
 [deps]
 Blosc = "a74b3585-a348-5f62-a45c-50e91977d574"
@@ -23,7 +23,7 @@ DataFrames = "0.19"
 Missings = "0.4"
 StatsBase = "0.32"
 WeakRefStrings = "0.6"
-julia = ">= 1.1"
+julia = "1.1, 1.2, 1.3"
 
 [extras]
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
