--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "JDF"
 uuid = "babc3d20-cd49-4f60-a736-a8f9c08892d3"
 authors = ["Dai ZJ <zhuojia.dai@gmail.com>"]
-version = "0.2.2"
+version = "0.2.1"
 
 [deps]
 Blosc = "a74b3585-a348-5f62-a45c-50e91977d574"
@@ -23,6 +23,7 @@ CategoricalArrays = "0.7"
 DataFrames = "0.19"
 Missings = "0.4"
 StatsBase = "0.32"
+TimeZones = "0.10"
 WeakRefStrings = "0.6"
 julia = "1.1, 1.2, 1.3"
 
