--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ Missings = "0.4"
 StatsBase = "0.32"
 TimeZones = "0.10"
 WeakRefStrings = "0.6"
-julia = "1.1, 1.2, 1.3"
+julia = "1.0, 1.1, 1.2, 1.3"
 
 [extras]
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
