--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "JDF"
 uuid = "babc3d20-cd49-4f60-a736-a8f9c08892d3"
 authors = ["Dai ZJ <zhuojia.dai@gmail.com>"]
-version = "0.2.7"
+version = "0.2.8"
 
 [deps]
 Blosc = "a74b3585-a348-5f62-a45c-50e91977d574"
@@ -12,6 +12,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Missings = "e1d29d7a-bbdc-5cf2-9ac0-f12de2c33e28"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
 WeakRefStrings = "ea10d353-3f73-51f8-a26c-33c1cb351aa5"
 
@@ -23,6 +24,7 @@ CategoricalArrays = "0.5, 0.6, 0.7"
 DataFrames = "0.19"
 Missings = "0.4"
 StatsBase = "0.32"
+Tables = "0.2"
 TimeZones = "0.10"
 WeakRefStrings = "0.6"
 julia = "1.0, 1.1, 1.2, 1.3"
