--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "JDF"
 uuid = "babc3d20-cd49-4f60-a736-a8f9c08892d3"
 authors = ["Dai ZJ <zhuojia.dai@gmail.com>"]
-version = "0.2.9"
+version = "0.2.10"
 
 [deps]
 Blosc = "a74b3585-a348-5f62-a45c-50e91977d574"
@@ -25,9 +25,9 @@ DataFrames = "0.19, 0.20"
 Missings = "0.4"
 StatsBase = "0.32"
 Tables = "0.2"
-TimeZones = "0.10"
+TimeZones = "0.10, 1"
 WeakRefStrings = "0.6"
-julia = "1.0, 1.1, 1.2, 1.3"
+julia = "1.0, 1.1, 1.2, 1.3, 1.4"
 
 [extras]
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
