--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "JDF"
 uuid = "babc3d20-cd49-4f60-a736-a8f9c08892d3"
 authors = ["Dai ZJ <zhuojia.dai@gmail.com>"]
-version = "0.2.12"
+version = "0.2.13"
 
 [deps]
 Blosc = "a74b3585-a348-5f62-a45c-50e91977d574"
@@ -19,11 +19,11 @@ WeakRefStrings = "ea10d353-3f73-51f8-a26c-33c1cb351aa5"
 [compat]
 Blosc = "0.5, 0.6"
 BufferedStreams = "1.0"
-CSV = "0.5"
+CSV = "0.5, 0.6"
 CategoricalArrays = "0.5, 0.6, 0.7"
 DataFrames = "0.19, 0.20"
 Missings = "0.4"
-StatsBase = "0.32"
+StatsBase = "0.32, 0.33"
 Tables = "1"
 TimeZones = "0.10, 1"
 WeakRefStrings = "0.6"
