--- a/Project.toml
+++ b/Project.toml
@@ -20,8 +20,8 @@ WeakRefStrings = "ea10d353-3f73-51f8-a26c-33c1cb351aa5"
 Blosc = "0.5, 0.6, 0.7"
 BufferedStreams = "1.0"
 CSV = "0.5, 0.6"
-CategoricalArrays = "0.5, 0.6, 0.7"
-DataFrames = "0.19, 0.20"
+CategoricalArrays = "0.5, 0.6, 0.7, 0.8"
+DataFrames = "0.19, 0.20, 0.21"
 Missings = "0.4"
 StatsBase = "0.32, 0.33"
 Tables = "1"
@@ -30,9 +30,8 @@ WeakRefStrings = "0.6"
 julia = "1"
 
 [extras]
-RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Random", "RDatasets"]
+test = ["Test", "Random"]
