--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,14 @@
 name = "JDF"
 uuid = "babc3d20-cd49-4f60-a736-a8f9c08892d3"
 authors = ["Dai ZJ <zhuojia.dai@gmail.com>"]
-version = "0.2.15"
+version = "0.2.16"
 
 [deps]
 Blosc = "a74b3585-a348-5f62-a45c-50e91977d574"
 BufferedStreams = "e1450e63-4bb3-523b-b2a4-4ffa8c0fd77d"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
+DataAPI = "9a962f9c-6df0-11e9-0e5d-c546b8b5ee8a"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Missings = "e1d29d7a-bbdc-5cf2-9ac0-f12de2c33e28"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
@@ -21,7 +22,8 @@ Blosc = "0.5, 0.6, 0.7"
 BufferedStreams = "1.0"
 CSV = "0.5, 0.6"
 CategoricalArrays = "0.5, 0.6, 0.7, 0.8"
-DataFrames = "0.19, 0.20, 0.21"
+DataAPI = "1"
+DataFrames = "0.21"
 Missings = "0.4"
 StatsBase = "0.32, 0.33"
 Tables = "1"
