--- a/Project.toml
+++ b/Project.toml
@@ -34,6 +34,7 @@ julia = "1"
 [extras]
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 
 [targets]
 test = ["Test", "Random", "RDatasets"]
