--- a/Project.toml
+++ b/Project.toml
@@ -32,9 +32,10 @@ WeakRefStrings = "0.6"
 julia = "1"
 
 [extras]
+JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
+RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 
 [targets]
 test = ["Test", "Random", "RDatasets"]
