--- a/Project.toml
+++ b/Project.toml
@@ -20,9 +20,9 @@ WeakRefStrings = "ea10d353-3f73-51f8-a26c-33c1cb351aa5"
 [compat]
 Blosc = "0.5, 0.6, 0.7"
 BufferedStreams = "1.0"
-CategoricalArrays = "0.5, 0.6, 0.7, 0.8"
+CategoricalArrays = "0.5, 0.6, 0.7, 0.8, 0.9"
 DataAPI = "1"
-DataFrames = "0.21"
+DataFrames = "0.21, 0.22"
 Missings = "0.4"
 PooledArrays = "0.5"
 StatsBase = "0.32, 0.33"
