--- a/Project.toml
+++ b/Project.toml
@@ -1,14 +1,13 @@
 name = "JDF"
 uuid = "babc3d20-cd49-4f60-a736-a8f9c08892d3"
 authors = ["Dai ZJ <zhuojia.dai@gmail.com>"]
-version = "0.2.20"
+version = "0.3.0"
 
 [deps]
 Blosc = "a74b3585-a348-5f62-a45c-50e91977d574"
 BufferedStreams = "e1450e63-4bb3-523b-b2a4-4ffa8c0fd77d"
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 DataAPI = "9a962f9c-6df0-11e9-0e5d-c546b8b5ee8a"
-DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Missings = "e1d29d7a-bbdc-5cf2-9ac0-f12de2c33e28"
 PooledArrays = "2dfb63ee-cc39-5dd5-95bd-886bf059d720"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
@@ -22,7 +21,6 @@ Blosc = "0.5, 0.6, 0.7"
 BufferedStreams = "1.0"
 CategoricalArrays = "0.5, 0.6, 0.7, 0.8, 0.9"
 DataAPI = "1"
-DataFrames = "0.21, 0.22"
 Missings = "0.4"
 PooledArrays = "0.5"
 StatsBase = "0.32, 0.33"
@@ -32,10 +30,11 @@ WeakRefStrings = "0.6"
 julia = "1"
 
 [extras]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Random", "RDatasets"]
+test = ["Test", "Random", "RDatasets", "DataFrames"]
