--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "JDF"
 uuid = "babc3d20-cd49-4f60-a736-a8f9c08892d3"
 authors = ["Dai ZJ <zhuojia.dai@gmail.com>"]
-version = "0.4.6"
+version = "0.4.7"
 
 [deps]
 Blosc = "a74b3585-a348-5f62-a45c-50e91977d574"
@@ -29,6 +29,7 @@ StatsBase = "0.32, 0.33"
 Tables = "1"
 TimeZones = "0.10, 1"
 WeakRefStrings = "0.6, 1"
+InlineStrings = "1"
 julia = "1"
 
 [extras]
