--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "JDF"
 uuid = "babc3d20-cd49-4f60-a736-a8f9c08892d3"
 authors = ["Dai ZJ <zhuojia.dai@gmail.com>"]
-version = "0.5.0"
+version = "0.5.1"
 
 [deps]
 Blosc = "a74b3585-a348-5f62-a45c-50e91977d574"
@@ -30,7 +30,7 @@ Tables = "1"
 TimeZones = "0.10, 1"
 WeakRefStrings = "0.6, 1"
 InlineStrings = "1"
-julia = "1"
+julia = "^1.3"
 
 [extras]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
