--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ CategoricalArrays = "0.5, 0.6, 0.7, 0.8, 0.9, 0.10"
 DataAPI = "1"
 Missings = "1"
 PooledArrays = "1"
-StatsBase = "0.32, 0.33"
+StatsBase = "0.32, 0.33, 0.34"
 Tables = "1"
 TimeZones = "0.10, 1"
 WeakRefStrings = "0.6, 1"
